op3: Disable unsupported softAP features
Change-Id: Ic88364f33da96e11a1bf570275102c80b010f925

--- a/overlay/frameworks/opt/net/wifi/service/res/values/config.xml
+++ b/overlay/frameworks/opt/net/wifi/service/res/values/config.xml
@@ -37,16 +37,19 @@
     <bool translatable="false" name="config_wifi_background_scan_support">true</bool>
 
    <!-- Enable ACS (auto channel selection) for Wifi hotspot (SAP) -->
-   <bool translatable="false" name="config_wifi_softap_acs_supported">true</bool>
+   <bool translatable="false" name="config_wifi_softap_acs_supported">false</bool>
 
    <!-- Enable 802.11ac for Wifi hotspot (SAP) -->
    <bool translatable="false" name="config_wifi_softap_ieee80211ac_supported">true</bool>
 
    <!-- Indicates that connected MAC randomization is supported on this device -->
-   <bool translatable="false" name="config_wifi_connected_mac_randomization_supported">true</bool>
+   <bool translatable="false" name="config_wifi_connected_mac_randomization_supported">false</bool>
 
     <!-- Indicates that p2p MAC randomization is supported on this device -->
-    <bool translatable="false" name="config_wifi_p2p_mac_randomization_supported">true</bool>
+    <bool translatable="false" name="config_wifi_p2p_mac_randomization_supported">false</bool>
+
+    <!-- Indicates that AP mode MAC randomization is supported on this device -->
+    <bool translatable="false" name="config_wifi_ap_mac_randomization_supported">false</bool>
 
     <!-- Channel list for softap 2G band. Empty means all channels -->
     <string translateble="false" name="config_wifiSoftap2gChannelList"></string>
@@ -54,10 +57,10 @@
     <string translateble="false" name="config_wifiSoftap5gChannelList"></string>
 
     <!-- Wifi driver supports WPA3 Simultaneous Authentication of Equals (WPA3-SAE) for softap -->
-    <bool name="config_wifi_softap_sae_supported">true</bool>
+    <bool name="config_wifi_softap_sae_supported">false</bool>
 
     <!-- Wifi driver Automatic channel selection (ACS) for softap to include DFS channels -->
-    <bool translatable="false" name="config_wifiSoftapAcsIncludeDfs">true</bool>
+    <bool translatable="false" name="config_wifiSoftapAcsIncludeDfs">false</bool>
 
     <!-- Integer indicating maximum hardware supported client number of soft ap -->
     <integer translatable="false" name="config_wifiHardwareSoftapMaxClientCount">32</integer>
